fix hidden header content (prevent header being overlapped by content on mobile)

--- a/src/planbox_ui/static/styles/main.scss
+++ b/src/planbox_ui/static/styles/main.scss
@@ -655,6 +655,9 @@ section, footer {
       }
     }
   }
+  & + .orderable-container {
+    clear: both;
+  }
 }
 
 .project-header {
